My favorite animal

--- a/index.html
+++ b/index.html
@@ -1,1 +1,64 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<title>My Favorite Animal</title>
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<link rel="icon" type="images/png" href="assets/images/logo.jpg">
+</head>
+<body>
+	<header>
+		<div id="logo"> 
+			<img src="assets/images/logo.jpg" width="200" height="" id="logo-id">
+		</div>
+		<div id="site-name">My Favourite Animal</div>
+	</header>
+	<nav>
+		<ul class="ul-class">
+			<li id="first"><a href="#"> Home </a></li>
+			<li><a href="#">About Us</a></li>
+			<li><a href="#">Contact Us </a></li>
+		</ul>
+
+	</nav>
+	<div class="container">
+		<section>
+			<img src="assets/images/main.jpg" id="main-img">
+			</section>
+				
+
+		<article>
+			<p> One day a tiger felt that it was more powerful than the lion and wanted to challenge the lion. It went near the lion’s den and started shouting and making all kids of sounds. It was noon and the lion was fast asleep after a meal. The sounds created by the tiger woke up lion.
+
+Who is there? Shouted the lion.
+
+There was no reply but the shouts of the tiger increased.
+
+The lion came out of its den and stood in front of the tiger that was shouting continuously.liontiger
+
+Staring deep into the tiger’s eys the lion asked: Why are you disturbing me, you can go to any other place in the forest and shout as loudly as you can. But I never allow you to disturb me any more.
+
+The tiger looked furiously at the lion and said: Look this forest belongs to all and so is this place too. You have no right to ask me to vacate this. I shall continue to be here and shout, as I like.
+
+</p> <p> In the meantime an elephant that was passing by noticed the argument between the tiger and the lion and came.
+
+‘Stop quarrelling. What is the problem. Let me know,’ demanded the elephant.
+
+The lion explained the reason and the tiger stood to its stance. The elephant felt helpless to resolve their conflict.
+
+Then came Dr.Dove. It has inquired from the elephant: What is going on here? Generally I do not see a tiger and a lion together?
+
+</p>
+		</article>
+		
+		
+	</div>
+	<aside>
+			
+		</aside>
+	<footer>
+
+
+		&copy; 2017 Desmond Ademiluyi 
+	</footer>
+</body>
+</html>
