--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<nav>
 		<ul class="ul-class">
 			<li id="first"><a href="#"> Home </a></li>
-			<li><a href="https://desmondtoyus.github.io">Visit My Site</a></li>
+			<li><a href="https://desmondtoyus.github.io/checkmate">Visit My Site</a></li>
 			<li><a href="#">Contact Us </a></li>
 		</ul>
 
